# PlayIntegrityFix

./: .gitignore  README.md  changelog.md  settings.gradle  update.json
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CMakeLists.txt  main.cpp  zygisk.hpp
app/src/main/java/es/chiteroman/playintegrityfix/: CustomAndroidKeyStoreSpi.java  CustomProvider.java  EntryPoint.java
gradle/wrapper/: gradle-wrapper.properties
magisk_module/: classes.dex  customize.sh  module.prop  post-fs-data.sh  service.sh
